<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BASE DE DATOS DE EDGAR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="numero_de_control">ID del Numero de control:</string>
    <string name="carrera">Carrera:</string>
    <string name="semestre">Semeste:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidop">Apellido Paterno:</string>
    <string name="apellidom">Apellido Materno:</string>
    <string name="agregar">Agregar</string>
    <string name="baja">Baja</string>
    <string name="consulta">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="limpiar">Limpiar</string>

</resources>
